--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,16 @@
 			<version>1.16.20</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.58</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
+		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
